# Vectorfoc

./: .clangd  .gitignore  .mxproject  BUILD_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CMakeLists_Bootloader.txt  CODE_AUDIT_REPORT.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VectorFOC.ioc  Zhang-FOC.ioc  compile_flags.txt  convert_temp.py  readme.md  startup_stm32g431xx.s
.agent/: CODE_REVIEW_RULES.md
.agent/rules/: strict_code_review_prompt.md
.agent/skills/architect-review/: SKILL.md
.agent/skills/skill-lookup/: SKILL.md
.github/: RELEASES.md
.github/workflows/: release.yml  vectorfoc-ci.yml
APP/: README.md  robot.c  robot.h
APP/init/: app_init.c
APP/isr/: isr_foc.c  isr_foc.h
APP/rtos/: cmd_service.c  cmd_service.h  task_guard.c
BSP/: bsp_adc_stm32g4.c  bsp_encoder_mt6816.c  bsp_pwm_stm32g4.c
BSP/can/: bsp_can.c
BSP/flash/: bsp_flash.c
BSP/log/: bsp_log.c  bsp_log.h
BSP/usart/: bsp_usart.c  bsp_usart.h
Core/Inc/: stm32g4xx_it.h
Core/Src/: app_freertos.c  gpio.c  main.c  tim.c
Drivers/STM32G4xx_HAL_Driver/Inc/: stm32g4xx_hal_def.h
Lib/: stm32g431xx_app.ld  stm32g431xx_bootloader.ld  stm32g431xx_flash.ld
Lib/Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_hal_conf.h
Lib/Core/Src/: adc.c  app_freertos.c  crc.c  dma.c  fdcan.c  gpio.c  main.c  rng.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  system_stm32g4xx.c  tim.c  usart.c
Lib/USB_Device/App/: usbd_cdc_if.c
MDK-ARM/: VectorFOC.uvprojx  Zhang-FOC.uvoptx  Zhang-FOC.uvprojx  startup_stm32g431xx.lst
MDK-ARM/RTE/_VectorFOC/: RTE_Components.h
MODULES/algorithm/: README.md
MODULES/algorithm/crc/: crc16.c  crc16.h  crc8.c  crc8.h
MODULES/communication/: COMM_TEST_GUIDE.md  OPTIMIZATION_SUMMARY.md  comm_stats_example.c  manager.c  manager.h  protocol_types.h
MODULES/communication/canopen/: canopen_protocol.c  canopen_protocol.h
MODULES/communication/executor/: executor.c
MODULES/communication/inovxio/: readme.md
MODULES/communication/mit/: mit_protocol.h
MODULES/encoder/: README.md
MODULES/encoder/MT6816/: mt6816_encoder.c  mt6816_encoder.h
MODULES/error/: README.md  error_config.h  error_manager.c
MODULES/hal/: README.md  hal_abstraction.c  hal_abstraction.h  hal_adc.c  hal_adc.h  hal_encoder.c  hal_encoder.h  hal_pwm.c  hal_pwm.h
MODULES/led/: README.md
MODULES/motor/: README.md  config.h
MODULES/motor/api/: motor_api.c
MODULES/motor/calibration/: calib_encoder.c  calib_encoder.h  calib_inductance.c  calib_inductance.h  calib_resistance.c  calib_resistance.h  calibration_context.h  current_calib.c  current_calib.h  flux_calib.c  rsls_calib.c  rsls_calib.h
MODULES/motor/control/: context.h  control.c  control.h
MODULES/motor/core/: motor.c  motor.h  motor_data.c
MODULES/motor/foc/: park.c  park.h
MODULES/motor/fsm/: fsm.c  fsm.h
MODULES/motor/hal/: adc.c  adc.h  motor_hal_api.h  motor_hal_g431.c  motor_pwm_driver.c  motor_pwm_driver.h
MODULES/motor/observer/: README.md  observer.h  smo_observer.h
MODULES/motor/safety/: README.md  fault_detection.c  safety_control.c  safety_control.h
MODULES/parameter/: README.md  param_storage.c  param_table.c  param_table.h
MODULES/vofa/: README.md  vofa.c  vofa.h
Src/ALGO/: README.md  common.h
Src/ALGO/control/: cogging.c  cogging.h  context.h  control.c  control.h  feedforward.c  feedforward.h  field_weakening.c  field_weakening.h  impl.c  impl.h  inner.c  inner.h  ladrc.c  ladrc.h  outer.c  outer.h
Src/ALGO/foc/: README.md  clarke.c  clarke.h  foc_algorithm.c  foc_algorithm.h  math_common.h  park.c  park.h  svpwm.c  svpwm.h  trigonometry.c  trigonometry.h
Src/ALGO/motor/: FSM.md  README_calibration.md  calib_encoder.c  calib_encoder.h  calib_inductance.c  calib_inductance.h  calib_resistance.c  calib_resistance.h  calibration_context.c  calibration_context.h  config.h  current_calib.c  current_calib.h  fault_def.c  fault_def.h  fault_detection.c  fault_detection.h  flux_calib.c  flux_calib.h  fsm.c  fsm.h  motor.c  motor.h  motor_api.c  motor_api.h  motor_data.c  rsls_calib.c  rsls_calib.h  safety_control.c  safety_control.h
Src/ALGO/observer/: observer.h  smo_observer.c  smo_observer.h
Src/ALGO/pid/: pid.c  pid.h
Src/ALGO/trajectory/: rate_limiter.c  rate_limiter.h  trap_traj.c  trap_traj.h
Src/APP/: README.md  app_header.c  device_id.h  platform.h  version.h
Src/APP/init/: app_init.c  app_init.h
Src/APP/isr/: isr_foc.c  isr_foc.h
Src/APP/rtos/: cmd_service.c  cmd_service.h  rtos_tasks.h  task_comm.c  task_debug.c  task_guard.c
Src/BOOT/: boot_config.h  boot_main.c  boot_protocol.c  boot_protocol.h  bootloader.c  bootloader.h  flash_ops.c  flash_ops.h
Src/COMM/: README.md
Src/COMM/executor/: executor.c  executor.h
Src/COMM/manager/: manager.c  (+2 more)
Src/SAFE/: fault_def.c  fault_def.h  fault_detection.c  fault_detection.h  safety_control.c  safety_control.h
Src/config/: board_config.h  board_config_xstar.h
cmake/: gcc-arm-none-eabi.cmake
docs/: COMPREHENSIVE_OPTIMIZATION_PLAN.md  FEATURE_ARCH_V1_1.md  OPTIMIZATION_ROADMAP.md  OTA_BOOTLOADER.md
log/: CHANGELOG_2026-02-08.md
scripts/: build.bat  build.sh  can_ping.py  ota_upload.py  remove_chinese.py  translate_comments.py
test/: CMakeLists.txt  analyze_results.py  mock_hal.c  motor_plant.c  motor_plant.h  test_calibration.c  test_comm_protocol.c  test_error_manager.c  test_executor.c  test_fault_injection.c  test_feedforward_cogging.c  test_foc_closed_loop.c  test_foc_core.c  test_foc_integration.c  test_foc_state.c  test_inovxio_protocol.c  test_ladrc.c  test_led.c  test_manager.c  test_pid.c  test_protocols.c  test_rate_limiter.c  test_smo_observer.c  test_trap_traj.c  test_trigonometry.c  test_vofa_bus_scan.c
test/mocks/: bootloader.h  bsp_can.h  bsp_dwt.h  bsp_log.h  bsp_usart.h  common.h  device_id.h  error_manager.h  error_types.h  hal_abstraction.h  hal_encoder.h  main.h  mock_hal_types.h  motor.h  motor_adc.h  mt6816_encoder.h  param_access.h  param_table.h  safety_control.h  stm32g4xx_hal.h  version.h
test/mocks/rtos/: cmd_service.h
(+82 files in other folders)
